--- a/visualBasic_archive/WPF/wpfTest/wpfTest/MainWindow.xaml
+++ b/visualBasic_archive/WPF/wpfTest/wpfTest/MainWindow.xaml
@@ -3,35 +3,33 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApplication1"
         mc:Ignorable="d"
         Title="edwrad's test visual basic WPF" Height="351" Width="525" Foreground="White">
 
-    <Grid>
-        <DockPanel Width="Auto" VerticalAlignment="Stretch" Height="Auto" HorizontalAlignment="Stretch" Grid.ColumnSpan="1" Grid.Column="0" Grid.Row="0" Margin="0,0,0,0" Grid.RowSpan="1">
-            <StackPanel>
-                <StackPanel.Background>
-                    <LinearGradientBrush>
-                        <GradientStop Color="White" Offset="0"/>
-                        <GradientStop Color="DarkKhaki" Offset=".3"/>
-                        <GradientStop Color="DarkKhaki" Offset=".7"/>
-                        <GradientStop Color="White" Offset="1"/>
-                    </LinearGradientBrush>
-                </StackPanel.Background>
-                <StackPanel Margin="10">
-                    <Button Name="simpleButton" Click="simpleButtonClick">Simple</Button>
-                </StackPanel>
-            </StackPanel>
-            <Viewport3D Name="mainViewport" ClipToBounds="True">
-                <Viewport3D.Camera>
-                    <PerspectiveCamera FarPlaneDistance="100" LookDirection="-11,-10,-9" UpDirection="0,1,0" NearPlaneDistance="1" Position="11,10,9" FieldOfView="70" />
-                </Viewport3D.Camera>
-                <ModelVisual3D>
-                    <ModelVisual3D.Content>
-                        <DirectionalLight Color="White" Direction="-2,-3,-1" />
-                    </ModelVisual3D.Content>
-                </ModelVisual3D>
-            </Viewport3D>
-        </DockPanel>
-    </Grid>
+    <Grid x:Name="grid1">
 
+        <Label Grid.Row="0"
+               Foreground="Yellow"
+               Background="Green"
+               FontSize="20"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center" Margin="141,62,141,218" Height="40"
+               >what is your names?</Label>
+        <TextBox
+                 FontSize="30"
+                 x:Name="txtAnswer" Margin="77,116,73,134"/>
+        <Button x:Name="bedward" 
+                FontSize="30" Click="Button_Click" 
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom" Margin="73,0,73,74"
+                >click to say your name</Button>
+
+        <DockPanel LastChildFill="False">
+            <Button DockPanel.Dock="Bottom">test dock
+            </Button>
+        </DockPanel>
+
+        <DatePicker HorizontalAlignment="Left" Margin="42,264,0,0" VerticalAlignment="Top"/>
+    </Grid>
 </Window>
